--- a/src/app/client/todo-item/todo-item.component.html
+++ b/src/app/client/todo-item/todo-item.component.html
@@ -17,7 +17,7 @@
     <div class="checkbox">
       <input type="checkbox"
              [checked]="item.status === ItemStatus.COMPLETED"
-             (click)="changeItemStatus(item)"
+             (click)="changeItemStatus($event, item)"
              [id]="index">
       <label [attr.for]="index">
         <demo-inline-edit
@@ -28,6 +28,5 @@
         </demo-inline-edit>
       </label>
     </div>
-    </div>
-
+  </div>
 </div>
